--- a/kassid.html
+++ b/kassid.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
   <link rel="stylesheet" href="styles.css">
+  <title>Kassid</title>
 </head>
 <body>
 
