--- a/koerad.html
+++ b/koerad.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="et">
 <head>
   <link rel="stylesheet" href="styles.css">
+  <title>Koerad</title>
 </head>
 <body>
 
