--- a/index.html
+++ b/index.html
@@ -4,17 +4,68 @@
   <link rel="stylesheet" href="styles.css">
   <title>Pealeht</title>
 </head>
-<body>
-
-<h1>Pealeht</h1>
-<p>This is a paragraph.</p>
-<nav>
-    <a href="index.html">Pealeht</a> |
-    <a href="koerad.html">Koerad</a> |
-    <a href="kassid.html">Kassid</a> |
-    <a href="muu.html">Muud loomad</a>
-  </nav>
-
-
-</body>
-</html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    font: 400 15px/1.8 "Lato", sans-serif;
+    color: #777;
+  }
+  
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    position: relative;
+    opacity: 0.65;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+  }
+  .bgimg-1 {
+    background-image: url("Pildid/Pealehe_pilt.jpg");
+    height: 100%;
+  }
+  
+  .caption {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+  }
+  
+  .caption span.border {
+    background-color: #111;
+    color: #fff;
+    padding: 18px;
+    font-size: 25px;
+    letter-spacing: 10px;
+  }
+  
+  h3 {
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font: 20px "Lato", sans-serif;
+    color: #111;
+  }
+  </style>
+  </head>
+  <body>
+  
+  <div class="bgimg-1">
+    <div class="caption">
+      <span class="border">LOOMACV</span><br>
+      <span class="border">
+        <a href="index.html">Pealeht</a> |
+        <a href="koerad.html">Koerad</a> |
+        <a href="kassid.html">Kassid</a> |
+        <a href="muu.html">Muud loomad</a>
+      </span><br>
+    </div>
+  </div>
+  
+  <p style="padding:5px 15px">Tore tekst tuleb siia</p>
+  
+  </body>
+  </html>
