Vigade parandus tehtud

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
-<head>
-  <link rel="stylesheet" href="styles.css">
-  <title>Pealeht</title>
-</head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
 <style>
   body, html {
     height: 100%;
@@ -49,20 +46,22 @@
     font: 20px "Lato", sans-serif;
     color: #111;
   }
-  </style>
-  </head>
-  <body>
+</style>
+  <link rel="stylesheet" href="styles.css">
+  <title>Pealeht</title>
+</head>
+<body>
   
-  <div class="bgimg-1">
-    <div class="caption">
-      <span class="border">LOOMACV</span><br>
-      <span class="border">
-        <a href="index.html">Pealeht</a> |
-        <a href="koerad.html">Koerad</a> |
-        <a href="kassid.html">Kassid</a> |
-        <a href="muu.html">Muud loomad</a>
-      </span><br>
-    </div>
+<div class="bgimg-1">
+  <div class="caption">
+    <span class="border">LOOMACV</span><br>
+    <span class="border">
+      <a href="index.html">Pealeht</a> |
+      <a href="koerad.html">Koerad</a> |
+      <a href="kassid.html">Kassid</a> |
+      <a href="muu.html">Muud loomad</a>
+    </span><br>
   </div>
-  </body>
-  </html>
+</div>
+</body>
+</html>
