--- a/kassid.html
+++ b/kassid.html
@@ -1,102 +1,126 @@
 <!DOCTYPE html>
 <html lang="et">
+
 <head>
   <link rel="stylesheet" href="styles.css">
   <script src="myscripts.js"></script>
   <title>Kassid</title>
 </head>
+
 <body>
 
-<h1>Kassid</h1>
+  <h1>Kassid</h1>
 
-<nav>
+  <nav>
     <a href="index.html">Pealeht</a> |
     <a href="koerad.html">Koerad</a> |
     <a href="kassid.html">Kassid</a> |
     <a href="muu.html">Muud loomad</a>
   </nav>
-  
+
   <div class="container">
 
     <!-- Full-width images with number text -->
-    <div class="mySlides">
-      <div class="numbertext">1 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
-    <div class="mySlides">
-      <div class="numbertext">2 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
-    <div class="mySlides">
-      <div class="numbertext">3 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
-    <div class="mySlides">
-      <div class="slaid" class="numbertext">4 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">5 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
-    <div class="mySlides">
-      <div class="numbertext">6 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-    <div class="mySlides">
-      <div class="numbertext">7 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
-    <div class="mySlides">
-      <div class="slaid" class="numbertext">8 / 8</div>
-        <img class="slaid" src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-    </div>
-  
+    <center>
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
 
-  
+      </div>
+
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+      
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+      
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+      </div>
+    </center>
+
+
+
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  
+
     <!-- Image text -->
     <div class="caption-container">
       <p id="caption"></p>
     </div>
-  
+
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"  onclick="currentSlide(1)" alt="Kass 1">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(1)" alt="Kass 1">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(2)" alt="Kass 2">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(2)" alt="Kass 2">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(3)" alt="Kass 3">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(3)" alt="Kass 3">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(4)" alt="Kass 4">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(4)" alt="Kass 4">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(5)" alt="Kass 5">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(5)" alt="Kass 5">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(6)" alt="Kass 6">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(6)" alt="Kass 6">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(7)" alt="Kass 7">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(7)" alt="Kass 7">
       </div>
       <div class="column">
-        <img class="demo cursor" src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" onclick="currentSlide(8)" alt="Kass 8">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(8)" alt="Kass 8">
       </div>
     </div>
   </div>
-  
+
 
 </body>
+
 </html>
