--- a/kassid.html
+++ b/kassid.html
@@ -20,50 +20,46 @@
 
   <div class="container">
 
-    <!-- Full-width images with number text -->
-    <center>
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 1">
 
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 2">
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 3">
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 4">
       </div>
       
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 5">
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-      </div>
-      
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 6">
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 7">
       </div>
-    </center>
 
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 8">
+      </div>
 
 
     <!-- Next and previous buttons -->
