--- a/koerad.html
+++ b/koerad.html
@@ -1,87 +1,123 @@
 <!DOCTYPE html>
 <html lang="et">
-<head>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
+  <script src="myscripts.js"></script>
   <title>Koerad</title>
-  <script src="script.js"></script>
 </head>
+
 <body>
 
-<h1>Koerad</h1>
-<p>This is a paragraph.</p>
-<nav>
+  <h1>Koerad</h1>
+
+  <nav>
     <a href="index.html">Pealeht</a> |
     <a href="koerad.html">Koerad</a> |
     <a href="kassid.html">Kassid</a> |
     <a href="muu.html">Muud loomad</a>
   </nav>
 
-  <!-- Container for the image gallery -->
-<div class="container">
+  <div class="container">
 
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-      <img src="dog1.png" style="width:100%">
-  </div>
+    <!-- Full-width images with number text -->
+    <div class= "paigutus">
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg" alt="Koer 1">
 
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-      <img src="dog.png.jpg" style="width:100%">
-  </div>
+      </div>
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/2951921/pexels-photo-2951921.jpeg" alt="Koer 2">
+      </div>
 
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-      <img src="dog2.png" style="width:100%">
-  </div>
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/3687770/pexels-photo-3687770.jpeg" alt="Koer 3">
+      </div>
 
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-      <img src="dog1.png" style="width:100%">
-  </div>
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg" alt="Koer 4">
+      </div>
+      
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg" alt="Koer 5">
+      </div>
 
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-      <img src="dog.png.jpg" style="width:100%">
-  </div>
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/2951921/pexels-photo-2951921.jpeg" alt="Koer 6">
+      </div>
+      
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/3687770/pexels-photo-3687770.jpeg" alt="Koer 7">
+      </div>
 
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-      <img src="dog2.png" style="width:100%">
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption">Kutsud</p>
-  </div>
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="dog1.png" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+      <div class="mySlides">
+        <img class="slaid"
+          src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg" alt="Koer 8">
+      </div>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="dog.png.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+    <!-- Image text -->
+    <div class="caption-container">
+      <p id="caption"></p>
     </div>
-    <div class="column">
-      <img class="demo cursor" src="dog2.png" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="dog1.png" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="dog.png.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="dog2.png" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+
+    <!-- Thumbnail images -->
+    <div class="row">
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg"
+          onclick="currentSlide(1)" alt="Koer 1">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/2951921/pexels-photo-2951921.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(2)" alt="Koer 2">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/3687770/pexels-photo-3687770.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(3)" alt="Koer 3">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(4)" alt="Koer 4">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg"
+          onclick="currentSlide(5)" alt="Koer 5">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/2951921/pexels-photo-2951921.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(6)" alt="Koer 6">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/3687770/pexels-photo-3687770.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(7)" alt="Koer 7">
+      </div>
+      <div class="column">
+        <img class="demo cursor"
+          src="https://images.pexels.com/photos/7210748/pexels-photo-7210748.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          onclick="currentSlide(8)" alt="Koer 8">
+      </div>
     </div>
   </div>
-</div>
 
 
 </body>
+
 </html>
