--- a/koerad.html
+++ b/koerad.html
@@ -1,3 +1,4 @@
+<!-- allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp-->
 <!DOCTYPE html>
 <html lang="et">
 <meta charset="UTF-8">
@@ -20,7 +21,7 @@
   <div class="container">
 
     <!-- Full-width images with number text -->
-    <div class= "paigutus">
+    <div>
       <div class="mySlides">
         <img class="slaid"
           src="https://images.pexels.com/photos/2607544/pexels-photo-2607544.jpeg" alt="Koer 1">
