--- a/kassid.html
+++ b/kassid.html
@@ -1,8 +1,7 @@
 <!-- allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp-->
 <!DOCTYPE html>
 <html lang="et">
-
-<head>
+<meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
   <script src="myscripts.js"></script>
   <title>Kassid</title>
@@ -44,12 +43,12 @@
       
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 5">
+          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 5">
       </div>
 
       <div class="mySlides">
         <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 6">
+          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 6">
       </div>
 
       <div class="mySlides">
