väiksed muudatused veel

--- a/test.html
+++ b/test.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ee">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Image Gallery</title>
+    <title>Koerte Galerii</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
