omanik ja faktid htmli lisatud

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Koerad</title>
+    <title id = "kategooria">Koerad</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -23,6 +23,9 @@
         <div id="full-image-container">
             <img id="full-image" alt="Full-size Image">
             <p id="nimi"></p>
+            <p id="vanus"></p>
+            <p id="omanik"></p>
+            <p id="fakt"></p>
             <div id="left-arrow" class="arrow" onclick="prevImage()">❮</div>
             <div id="right-arrow" class="arrow" onclick="nextImage()">❯</div>
         </div>
