--- a/test.html
+++ b/test.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title id = "kategooria">Koerad</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Koerad</h1>
+    <h1 class = "font" id = "h1">KOERAD</h1>
 
     <nav id="nav-menu">
-        <a href="index.html">Pealeht</a> |
-        <a href="koerad.html">Koerad</a> |
-        <a href="kassid.html">Kassid</a> |
-        <a href="muu.html">Muud loomad</a> |
-        <a href="test.html">Test</a>
+        <a href="index.html" class = "font">Pealeht</a> |
+        <a href="koerad.html" class = "font">Koerad</a> |
+        <a href="kassid.html" class = "font">Kassid</a> |
+        <a href="muu.html" class = "font">Muud loomad</a> |
+        <a href="test.html" class = "font">Test</a>
       </nav>
 
 
     <div id="main-container">
         <div id="full-image-container">
             <img id="full-image" alt="Full-size Image">
-            <p id="nimi"></p>
-            <p id="vanus"></p>
-            <p id="omanik"></p>
-            <p id="fakt"></p>
+            <p id="nimi" class = "font"></p>
+            <p id="vanus" class = "font"></p>
+            <p id="omanik" class = "font"></p>
+            <p id="fakt" class = "font"></p>
             <div id="left-arrow" class="arrow" onclick="prevImage()">❮</div>
             <div id="right-arrow" class="arrow" onclick="nextImage()">❯</div>
         </div>
