--- a/kassid.html
+++ b/kassid.html
@@ -1,122 +1,38 @@
-<!-- allikas: https://www.w3schools.com/howto/howto_js_slideshow_gallery.asp-->
 <!DOCTYPE html>
-<html lang="et">
-<meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
-  <script src="myscripts.js"></script>
-  <title>Kassid</title>
+<html lang="ee">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title id = "kategooria">Kassid</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-
 <body>
+    <h1>Koerad</h1>
 
-  <h1>Kassid</h1>
-
-  <nav>
-    <a href="index.html">Pealeht</a> |
-    <a href="koerad.html">Koerad</a> |
-    <a href="kassid.html">Kassid</a> |
-    <a href="muu.html">Muud loomad</a>
-  </nav>
-
-  <div class="container">
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 1">
-
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 2">
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 3">
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 4">
-      </div>
-      
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 5">
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 6">
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 7">
-      </div>
-
-      <div class="mySlides">
-        <img class="slaid"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Kass 8">
-      </div>
+    <nav id="nav-menu">
+        <a href="index.html">Pealeht</a> |
+        <a href="koerad.html">Koerad</a> |
+        <a href="kassid.html">Kassid</a> |
+        <a href="muu.html">Muud loomad</a>
+      </nav>
 
 
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <div id="main-container">
+        <div id="full-image-container">
+            <img id="full-image" alt="Full-size Image">
+            <p id="nimi"></p>
+            <p id="vanus"></p>
+            <p id="omanik"></p>
+            <p id="fakt"></p>
+            <div id="left-arrow" class="arrow" onclick="prevImage()">❮</div>
+            <div id="right-arrow" class="arrow" onclick="nextImage()">❯</div>
+        </div>
 
-    <!-- Image text -->
-    <div class="caption-container">
-      <p id="caption"></p>
+        <div id="gallery"></div>
     </div>
 
-    <!-- Thumbnail images -->
-    <div class="row">
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(1)" alt="Kass 1">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(2)" alt="Kass 2">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(3)" alt="Kass 3">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(4)" alt="Kass 4">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/1643456/pexels-photo-1643456.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(5)" alt="Kass 5">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/1472999/pexels-photo-1472999.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(6)" alt="Kass 6">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/3772262/pexels-photo-3772262.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(7)" alt="Kass 7">
-      </div>
-      <div class="column">
-        <img class="demo cursor"
-          src="https://images.pexels.com/photos/96428/pexels-photo-96428.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-          onclick="currentSlide(8)" alt="Kass 8">
-      </div>
-    </div>
-  </div>
 
 
 </body>
-
 </html>
