--- a/muu.html
+++ b/muu.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
-<html lang="et">
+<html lang="ee">
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <title>Muud loomad</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title id = "kategooria">Muud Loomad</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
+    <h1>Koerad</h1>
 
-<h1>Muud loomad</h1>
-<p>This is a paragraph.</p>
-<nav>
-    <a href="index.html">Pealeht</a> |
-    <a href="koerad.html">Koerad</a> |
-    <a href="kassid.html">Kassid</a> |
-    <a href="muu.html">Muud loomad</a>
-  </nav>
+    <nav id="nav-menu">
+        <a href="index.html">Pealeht</a> |
+        <a href="koerad.html">Koerad</a> |
+        <a href="kassid.html">Kassid</a> |
+        <a href="muu.html">Muud loomad</a>
+      </nav>
+
+
+    <div id="main-container">
+        <div id="full-image-container">
+            <img id="full-image" alt="Full-size Image">
+            <p id="nimi"></p>
+            <p id="vanus"></p>
+            <p id="omanik"></p>
+            <p id="fakt"></p>
+            <div id="left-arrow" class="arrow" onclick="prevImage()">❮</div>
+            <div id="right-arrow" class="arrow" onclick="nextImage()">❯</div>
+        </div>
+
+        <div id="gallery"></div>
+    </div>
+
 
 
 </body>
