--- a/kassid.html
+++ b/kassid.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <h1>Koerad</h1>
+    <h1>Kassid</h1>
 
     <nav id="nav-menu">
         <a href="index.html">Pealeht</a> |
