--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <html lang="et">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap">
+  <link rel="stylesheet" href="style.css">
   <title>Pealeht</title>
 </head>
 <body>
   
 <div class="bgimg-1">
   <div class="caption">
-    <span class="border">LOOMACV</span><br>
-    <span class="border">
+    <h1 class="h1" id="pl">LOOMACV</h1>
+    <span class="nav-menu">
       <a href="index.html">Pealeht</a> |
       <a href="koerad.html">Koerad</a> |
       <a href="kassid.html">Kassid</a> |
