--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!--allikas: https://www.w3schools.com/howto/howto_css_full_page.asp-->
+<!--HTML tava kood-->
 <!DOCTYPE html>
 <html lang="et">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +9,7 @@
   <title>Pealeht</title>
 </head>
 <body>
-  
+<!--klassid/lingid järgmistele lehtedele-->  
 <div class="bgimg-1">
   <div class="caption">
     <h1 class="h1" id="pl">LOOMACV</h1>
