--- a/koerad.html
+++ b/koerad.html
@@ -1,3 +1,4 @@
+<!--HTML tava kood-->
 <!DOCTYPE html>
 <html lang="ee">
 <head>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
+<!--klassid/lingid järgmistele lehtedele-->
 <body>
     <h1 class = "h1" >Koerad</h1>
 
@@ -18,7 +20,7 @@
         <a href="muu.html">Muud loomad</a>
       </nav>
 
-
+<!--Erinevad klassid ja id mida lehel näidata-->
     <div id="main-container">
         <div id="full-image-container">
             <img id="full-image" alt="Full-size Image">
