--- a/kassid.html
+++ b/kassid.html
@@ -1,4 +1,4 @@
-<!--HTML tava kood-->
+<!--HTML tavakood-->
 <!DOCTYPE html>
 <html lang="ee">
 <head>
@@ -23,7 +23,7 @@
 <!--Erinevad klassid ja id mida lehel näidata-->
     <div id="main-container">
         <div id="full-image-container">
-            <img id="full-image" alt="Full-size Image">
+            <img id="full-image" alt="Full-size Image" src="Pildid/Kassid/">
             <div class="tekst">
               <p id="nimi"></p>
               <p id="vanus"></p>
